--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
-  "name": "recargapix",
-  "version": "1.0.0",
-  "main": "src/main/index.ts",
-  "author": "Thalison Eduardo <thalison.eduardo14@gmail.com>",
-  "license": "MIT",
-  "private": true,
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "eslint": "^8.39.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.8"
-  }
+    "name": "recargapix",
+    "version": "1.0.0",
+    "main": "src/main/index.ts",
+    "author": "Thalison Eduardo <thalison.eduardo14@gmail.com>",
+    "license": "MIT",
+    "private": true,
+    "scripts": {
+        "prepare": "husky install",
+        "lint": "eslint src --fix --max-warnings=0"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.59.2",
+        "@typescript-eslint/parser": "^5.59.2",
+        "eslint": "^8.39.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "husky": "^8.0.3",
+        "lint-staged": "^13.2.2",
+        "prettier": "^2.8.8"
+    },
+    "lint-staged": {
+        "src/**": [
+            "yarn lint"
+        ]
+    }
 }
