chore: add typescript

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "private": true,
     "scripts": {
         "prepare": "husky install",
-        "lint": "eslint src --fix --max-warnings=0"
+        "lint": "eslint src --fix --max-warnings=0",
+        "dev": "ts-node-dev -r tsconfig-paths/register --inspect --respawn --transpile-only --ignore-watch node_modules --no-notify src/main/server"
     },
     "devDependencies": {
+        "@types/node": "^18.16.3",
         "@typescript-eslint/eslint-plugin": "^5.59.2",
         "@typescript-eslint/parser": "^5.59.2",
         "eslint": "^8.39.0",
@@ -17,7 +19,12 @@
         "eslint-plugin-prettier": "^4.2.1",
         "husky": "^8.0.3",
         "lint-staged": "^13.2.2",
-        "prettier": "^2.8.8"
+        "prettier": "^2.8.8",
+        "ts-node-dev": "^2.0.0",
+        "tsconfig-paths": "^4.2.0",
+        "ttypescript": "^1.5.15",
+        "typescript": "^5.0.4",
+        "typescript-transform-paths": "^3.4.6"
     },
     "lint-staged": {
         "src/**": [
