--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "scripts": {
         "prepare": "husky install",
         "lint": "eslint src --fix --max-warnings=0",
-        "dev": "ts-node-dev -r tsconfig-paths/register --inspect --respawn --transpile-only --ignore-watch node_modules --no-notify src/main/server"
+        "dev": "ts-node-dev -r tsconfig-paths/register --inspect --respawn --transpile-only --ignore-watch node_modules --no-notify src/main/server",
+        "typeorm": "typeorm-ts-node-commonjs",
+        "start": "ts-node src/index.ts",
+        "build": "ttsc --project tsconfig.build.json"
     },
     "devDependencies": {
-        "@types/node": "^18.16.3",
+        "@types/express": "^4.17.17",
+        "@types/node": "^16.11.10",
         "@typescript-eslint/eslint-plugin": "^5.59.2",
         "@typescript-eslint/parser": "^5.59.2",
         "eslint": "^8.39.0",
@@ -20,15 +24,24 @@
         "husky": "^8.0.3",
         "lint-staged": "^13.2.2",
         "prettier": "^2.8.8",
+        "ts-node": "10.7.0",
         "ts-node-dev": "^2.0.0",
         "tsconfig-paths": "^4.2.0",
         "ttypescript": "^1.5.15",
-        "typescript": "^5.0.4",
+        "typescript": "4.5.2",
         "typescript-transform-paths": "^3.4.6"
     },
     "lint-staged": {
         "src/**": [
             "yarn lint"
         ]
+    },
+    "dependencies": {
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "pg": "^8.10.0",
+        "reflect-metadata": "^0.1.13",
+        "tsyringe": "^47.0",
+        "typeorm": "0.3.15"
     }
 }
