--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "sourceMap": false,
         "outDir": "dist",
         "baseUrl": ".",
-        "rootDir": "./",
+        "rootDir": "./src",
         "paths": {
             "@/*": ["src/*"],
             "@domain/*": ["src/domain/*"],
