feat: add payment controller

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ POSTGRES_USER = recargapix
 POSTGRES_PASSWORD = recargapix
 POSTGRES_DB = recargapix
 DATABASE_PORT = 5432
+PAGARME_KEY=pk_test_Na9XQyPhnTEm8b4L
+PAGARME_URL="https://api.pagar.me/core/v5"
