--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         ]
     },
     "dependencies": {
+        "axios": "^1.4.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "pg": "^8.10.0",
