--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.17",
+        "@types/faker": "^6.6.9",
         "@types/node": "^16.11.10",
         "@typescript-eslint/eslint-plugin": "^5.59.2",
         "@typescript-eslint/parser": "^5.59.2",
@@ -28,6 +29,7 @@
         "ts-node-dev": "^2.0.0",
         "tsconfig-paths": "^4.2.0",
         "ttypescript": "^1.5.15",
+        "typeorm-extension": "^3.0.1",
         "typescript": "4.5.2",
         "typescript-transform-paths": "^3.4.6"
     },
@@ -40,9 +42,11 @@
         "axios": "^1.4.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "faker": "^6.6.6",
         "pg": "^8.10.0",
         "reflect-metadata": "^0.1.13",
         "tsyringe": "^47.0",
-        "typeorm": "0.3.15"
+        "typeorm": "0.3.15",
+        "typeorm-seeding": "^1.6.1"
     }
 }
