feat: add entities seed

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "dev": "ts-node-dev -r tsconfig-paths/register --inspect --respawn --transpile-only --ignore-watch node_modules --no-notify src/main/server",
         "typeorm": "typeorm-ts-node-commonjs",
         "start": "ts-node src/index.ts",
-        "build": "ttsc --project tsconfig.build.json"
+        "build": "ttsc --project tsconfig.build.json",
+        "seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed -n src/main/database/dataSource.ts"
     },
     "devDependencies": {
         "@types/express": "^4.17.17",
@@ -45,8 +46,8 @@
         "faker": "^6.6.6",
         "pg": "^8.10.0",
         "reflect-metadata": "^0.1.13",
-        "tsyringe": "^47.0",
-        "typeorm": "0.3.15",
+        "tsyringe": "^4.7.0",
+        "typeorm": "^0.3.17",
         "typeorm-seeding": "^1.6.1"
     }
 }
